API + Backend:
- Moved from strings to uint for unique IDs
- Created function skeletons for api handler
- Defined logger for requests
- Created function skeletons for database handler
- Defined db tables
- Update go.mod version

TODO: implement missing functions

Backend: initial commit

- Imported files from template
- Updated dependencies

Folders webui/vendor will be pushed later
